<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">i212493</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login"><b>Login</b></string>
    <string name="mentor"><i>mentor</i></string>
    <string name="me"><i>me</i></string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="getstarted"><b>Get Started!</b></string>
    <string name="forgetpassword"><b>Forget Password?</b></string>
    <string name="resetpassword"><b>Reset Password?</b></string>
    <string name="log"><u>Login</u></string>
    <string name="intro"><b>Hi, I</b></string>
    <string name="m"><b>m</b></string>
    <string name="john"><b>John Cooper</b></string>
    <string name="add"><b>Add New Mentor</b></string>
    <string name="upload"><b>Upload Photo</b></string>
    <string name="video"><b>Upload Video</b></string>
    <string name="hdr"><b>HDR</b></string>
    <string name="slo"><b>Slo-mo</b></string>
    <string name="videos"><b>Video</b></string>
    <string name="photo"><b>Photo</b></string>
    <string name="sq"><b>Square</b></string>
    <string name="potrait"><b>Portrait</b></string>
    <string name="time"><b>50:08</b></string>
    <string name="notify"><b>Notifications</b></string>
    <string name="clear"><b>Clear All</b></string>
    <string name="text12"><b>Your favorite mentor is Online. Say Hi to him.</b></string>
    <string name="booked"><b>Booked Sessions</b></string>
    <string name="date"><b>24th Dec 2023      1:00 pm</b></string>
    <string name="Emma"><b>Emma Phillips</b></string>
    <string name="date2"><b>1st Jan 2024      09:00 pm</b></string>
    <string name="num0"><b>0</b></string>
    <string name="num2"><b>2</b></string>
    <string name="num3"><b>3</b></string>
    <string name="num4"><b>4</b></string>
    <string name="num5"><b>5</b></string>
    <string name="num6"><b>6</b></string>
    <string name="num7"><b>7</b></string>
    <string name="num8"><b>8</b></string>
    <string name="num9"><b>9</b></string>
    <string name="num1"><b>1</b></string>
    <string name="verification"><b>Verify your phone number</b></string>
    <string name="verify"><b>Verify</b></string>
    <string name="time2"><b>00:20</b></string>
    <string name="let"><b>Let</b></string>
    <string name="find"><b>s Find...</b></string>
    <string name="recent"><b>Recent searches</b></string>
    <string name="m1"><b>Mentor 1</b></string>
    <string name="m2"><b>Mentor 2</b></string>
    <string name="m3"><b>Mentor 3</b></string>
    <string name="browse"><b>Browse Categories</b></string>
    <string name="ent"><b>Entrepreneurship</b></string>
    <string name="edu"><b>Education</b></string>
    <string name="personal"><b>Personal Growth</b></string>
    <string name="edit"><b>Edit Profile</b></string>
    <string name="search"><b>Search Result</b></string>
    <string name="filter"><b>Filter</b></string>
    <string name="sam1"><b>Sample 1</b></string>
    <string name="sam2"><b>Sample 2</b></string>
    <string name="sam3"><b>Sample 3</b></string>
    <string name="sam4"><b>Sample 4</b></string>
    <string name="sam5"><b>Sample 5</b></string>
    <string name="about"><b>About me</b></string>
    <string name="rating"><b>4.8</b></string>
    <string name="myexp"><b>My Expertise Include</b></string>
    <string name="career"><b>Career Advice</b></string>
    <string name="user"><b>User Experience Design</b></string>
    <string name="leadership"><b>Leadership</b></string>
    <string name="Prototyping"><b>Prototyping</b></string>
    <string name="drop"><b>Drop a review</b></string>
    <string name="join"><b>Join Community</b></string>
    <string name="hello"><b>Hello, </b></string>
    <string name="ali"><b>Ali</b></string>
    <string name="career1"><b>Career</b></string>
    <string name="TOP"><b>Top Mentors for you</b></string>
    <string name="martina"><b>Martina Watson</b></string>
    <string name="emma"><b>Emma</b></string>
    <string name="edu_men"><b>Education Mentors</b></string>
    <string name="michael"><b>Michael Drake</b></string>
    <string name="alex"><b>Alex</b></string>
    <string name="jane"><b>Jane</b></string>
    <string name="rec_men"><b>Recent Mentors</b></string>
    <string name="chat"><b>Chats</b></string>
    <string name="community"><b>My Community</b></string>
    <string name="message"><b>All Messages</b></string>
    <string name="jack"><b>Jack Watson</b></string>
    <string name="s"><b>s</b></string>
    <string name="community1"><b>Community</b></string>
    <string name="profile"><b>My Profile</b></string>
    <string name="fav"><b>Favorite Mentors</b></string>
    <string name="reviews"><b>My Reviews</b></string>
    <string name="n"><b>Book your Session</b></string>
    <string name="money"><b>$1500/Session</b></string>
    <string name="avail"><b>Available Time Slots</b></string>
</resources>