<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF8F8"
    tools:context=".VerifyPhoneNumberActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        android:onClick="onBackButtonClicked"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:text="@string/verification"
        android:textColor="#157177"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/code"
        android:layout_width="190dp"
        android:layout_height="25dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="65dp"
        android:text="We've sent a code to"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number"
        android:layout_width="190dp"
        android:layout_height="25dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="213dp"
        android:text="+92 321 2242022"
        android:textSize="16dp"
        android:textColor="#157177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/circle1"
        android:layout_width="57.5dp"
        android:layout_height="57.5dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="35dp"
        android:background="@drawable/bordered_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/circle2"
        android:layout_width="57.5dp"
        android:layout_height="57.5dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="100dp"
        android:alpha="0.7"
        android:background="@drawable/bordered_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/circle3"
        android:layout_width="57.5dp"
        android:layout_height="57.5dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="170dp"
        android:alpha="0.7"
        android:background="@drawable/bordered_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/circle4"
        android:layout_width="57.5dp"
        android:layout_height="57.5dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="240dp"
        android:alpha="0.7"
        android:background="@drawable/bordered_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/circle5"
        android:layout_width="57.5dp"
        android:layout_height="57.5dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="310dp"
        android:alpha="0.7"
        android:background="@drawable/bordered_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verify"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:layout_marginTop="-70dp"
        android:layout_marginLeft="110dp"
        android:background="@drawable/rounded_blue_button"
        android:text="@string/verify"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraintLayout1"
         />

    <TextView
        android:id="@+id/again"
        android:layout_width="190dp"
        android:layout_height="25dp"
        android:layout_marginTop="297.5dp"
        android:layout_marginLeft="130dp"
        android:text="Send code again"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="190dp"
        android:layout_height="25dp"
        android:layout_marginTop="297.5dp"
        android:layout_marginLeft="242.5dp"
        android:text="@string/time2"
        android:textSize="15dp"
        android:textColor="#157177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#50C2C9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="325dp"
        app:layout_constraintHeight_percent="0.57">

        <TextView
            android:id="@+id/num1"
            android:layout_width="65dp"
            android:layout_height="62dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#8FDADE"
            android:text="@string/num1"
            android:textColor="#FFFFFF"
            android:textSize="42dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/num2"
            android:layout_width="65dp"
            android:layout_height="62dp"
            android:layout_marginStart="167.5dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#8FDADE"
            android:text="@string/num2"
            android:textColor="#FFFFFF"
            android:textSize="42dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/num3"
            android:layout_width="65dp"
            android:layout_height="62dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#8FDADE"
            android:text="@string/num3"
            android:textColor="#FFFFFF"
            android:textSize="42dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/num4"
            android:layout_width="65dp"
            android:layout_height="62dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="128dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#8FDADE"
            android:text="@string/num4"
            android:textColor="#FFFFFF"
            android:textSize="42dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/num5"
            android:layout_width="65dp"
            android:layout_height="62dp"
            android:layout_marginStart="167.5dp"
            android:layout_marginTop="128dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#8FDADE"
            android:text="@string/num5"
            android:textColor="#FFFFFF"
            android:textSize="42dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/num6"
            android:layout_width="65dp"
            android:layout_height="62dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="128dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#8FDADE"
            android:text="@string/num6"
            android:textColor="#FFFFFF"
            android:textSize="42dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/num7"
            android:layout_width="65dp"
            android:layout_height="62dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="228dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#8FDADE"
            android:text="@string/num7"
            android:textColor="#FFFFFF"
            android:textSize="42dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/num8"
            android:layout_width="65dp"
            android:layout_height="62dp"
            android:layout_marginStart="167.5dp"
            android:layout_marginTop="228dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#8FDADE"
            android:text="@string/num8"
            android:textColor="#FFFFFF"
            android:textSize="42dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/num9"
            android:layout_width="65dp"
            android:layout_height="62dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="228dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#8FDADE"
            android:text="@string/num9"
            android:textColor="#FFFFFF"
            android:textSize="42dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="332.5dp"
            android:src="@drawable/backspace"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/num0"
            android:layout_width="65dp"
            android:layout_height="62dp"
            android:layout_marginStart="167.5dp"
            android:layout_marginTop="328dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="#8FDADE"
            android:text="@string/num0"
            android:textColor="#FFFFFF"
            android:textSize="42dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>