<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF8F8"
    tools:context=".MentorProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.85"
        android:background="@drawable/rounded_bottomborders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.585"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="52dp"
            android:layout_height="48dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:background="@android:color/transparent"
            android:onClick="onBackButtonClicked"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/pic"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="30dp"
            android:alpha="0.7"
            android:background="@drawable/circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pic1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="54dp"
            android:layout_marginRight="-267dp"
            android:src="@drawable/aiden_walker"
            app:layout_constraintBottom_toBottomOf="@id/pic"
            app:layout_constraintEnd_toEndOf="@id/pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"
            android:text="@string/intro"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="70dp"
            android:text="'"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="70dp"
            android:text="@string/m"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/johnc"
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="110dp"
            android:text="@string/john"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"

            android:layout_marginTop="8dp"
            android:alpha="0.7"
            android:background="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/johnc"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/line_bottom_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="UX Designer at"
            android:textSize="27dp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"  />

        <TextView
            android:id="@+id/line_bottom_text1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:text="Google"
            android:textSize="27dp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"  />

        <View
            android:id="@+id/star"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"  />

        <TextView
            android:id="@+id/text4.8"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="345dp"
            android:layout_marginTop="5dp"
            android:text="@string/rating"
            android:textSize="23dp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"  />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="110dp"
            android:alpha="0.7"
            android:background="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/johnc"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/aboutme"
            android:layout_width="80dp"
            android:layout_height="27dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/about"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2"  />

        <TextView
            android:id="@+id/aboutme1"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="40dp"
            android:text="I am a passionate UX designer at Google with a focus on creating user-centric and intuitive interfaces. With 10 years of experience, I have had the opportunity to work on diverse projects that have shaped my understanding of design principles and user experience."
            android:textColor="#FFFFFF"
            android:textSize="11dp"
            android:lineSpacingExtra="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2"  />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="180dp"
        android:layout_height="27dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/myexp"
        android:textColor="#157177"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"  />


    <TextView
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="#50C2C9"
        android:paddingLeft="25dp"
        android:paddingTop="4dp"
        android:text="@string/career"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="#50C2C9"
        android:paddingLeft="11dp"
        android:paddingTop="4dp"
        android:text="@string/user"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout" />

    <TextView
        android:layout_width="115dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="105dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="#50C2C9"
        android:paddingLeft="28dp"
        android:paddingTop="4dp"
        android:text="@string/leadership"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout" />

    <TextView
        android:layout_width="115dp"
        android:layout_height="25dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="105dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="#50C2C9"
        android:paddingLeft="27dp"
        android:paddingTop="4dp"
        android:text="@string/Prototyping"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout" />


    <TextView
        android:id="@+id/yellowbox1"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/grey_rounded_bar"
        android:backgroundTint="#FFC90A"
        android:paddingLeft="15dp"
        android:paddingTop="4dp"
        android:text="@string/drop"
        android:textColor="#157177"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout" />


    <View
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="110dp"
        android:background="@drawable/review"
        app:layout_constraintTop_toTopOf="@id/yellowbox1"
        app:layout_constraintStart_toStartOf="@id/yellowbox1" />

    <TextView
        android:id="@+id/yellowbox2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/grey_rounded_bar"
        android:backgroundTint="#FFC90A"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:text="@string/join"
        android:textColor="#157177"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout" />


    <View
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="122.5dp"
        android:background="@drawable/group"
        app:layout_constraintTop_toTopOf="@id/yellowbox2"
        app:layout_constraintStart_toStartOf="@id/yellowbox2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/book"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="630dp"
        android:background="@drawable/rounded_blue_button"
        android:text="Book a Session"
        android:textColor="#FFFFFF"
        android:textSize="16.8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>